[package]
name = "iroh-car"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Implementation the car files for iroh"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.63.0"
repository = "https://github.com/n0-computer/iroh-car"
homepage = "https://github.com/n0-computer/iroh-car"
readme="README.md"

[dependencies]
anyhow = "1"
cid = "0.10"
futures = "0.3"
ipld = { package = "libipld", version = "0.16", features = ["dag-cbor", "derive"] }
thiserror = "1"
tokio = { version = "^1", features = ["io-util"] }
unsigned-varint = "0.8.0"

[dev-dependencies]
multihash = "0.18"
tokio = { version = "^1", features = ["macros", "sync", "rt", "io-util"] }
test-strategy = "0.3"

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "^0.3" }
proptest = { version = "1.1", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.1"
