[package]
name = "iroh-car"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Implementation the car files for iroh"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.66.0"
repository = "https://github.com/n0-computer/iroh-car"
homepage = "https://github.com/n0-computer/iroh-car"
readme="README.md"

[dependencies]
anyhow = "1"
cid = { version = "0.11", features = ["serde"] }
futures = "0.3"
ipld-core = { version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
thiserror = "1"
tokio = { version = "^1", features = ["io-util"] }
unsigned-varint = "0.7.1"

[dev-dependencies]
multihash = "0.19"
tokio = { version = "^1", features = ["macros", "sync", "rt", "io-util"] }
test-strategy = "0.3"
multihash-codetable = { version = "0.1.3", features = ["blake3"] }

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "^0.3" }
proptest = { version = "1.1", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.1"
